# FloorPlan

./: .gitignore  README.md  main.py  pyproject.toml
dev/: model_rec.ipynb
src/floorplan3d/: __init__.py  api.py  cli.py  config.py  detection.py  geometry_solver.py  image_preprocess.py  ocr.py  pdf_loader.py  pipeline.py  scene_builder.py  schemas.py  segmentation.py
tests/: test_api.py  test_detection.py  test_pipeline.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  FloorPlanEditor.tsx  ThreeViewer.tsx  api.ts  styles.css  types.ts
