[project]
name = "floorplan-3d"
version = "0.1.0"
description = "Floor plan PDF/image to editable JSON and 3D scene MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=5.0.0.93",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "scikit-image>=0.24.0",
    "shapely>=2.0.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "trimesh>=4.12.2",
    "ultralytics>=8.4.90",
    "uvicorn>=0.39.0",
]

[project.scripts]
floorplan3d = "floorplan3d.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.15.20",
]
